adjust images of searchresult items

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,6 @@
 <div class="search">
   <%= form_tag new_item_path , method: :get do %>
+    <!-- 入力をurlのクエリパラメータqに設定 => prams[:q]でコントローラが受け取る -->
     <%= text_field_tag :q , params[:q], placeholder: "キーワードを入力", required: true %>
     <%= submit_tag "アイテムを検索", name: nil , class: "btn btn-success", data: { disable_with: "検索中..."} %>
   <% end %>
