add have and want function

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <meta name='description' content='<%= @user.name %>のページ。<%= @user.name %>の持ってるモノ、欲しいモノを表示しています。'>
+  <title><%= @user.name %> - monolist</title>
+<% end %>
+
 <%= render 'profile' , user: @user %>
 
 
