--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,15 +1,26 @@
+<% content_for :head do %>
+  <meta name='description' content='<%= @item.title %>に関する情報です。このアイテムを持っているユーザを表示しています'>
+  <title><%= @item.title %> - monolist</title>
+<% end %>
+
 <div class="container">
   <div class="container-inner inner-sm clearfix">
     <div class="item-single-main">
       <div class="image">
         <div class="img-wrap">
           <% #TODO 商品イメージ %>
-          <%= image_tag("no-image.png" , alt: @item.title) %>
+          <% # itemオブジェクトにLargeImage/URLがある場合は商品画像表示 %>
+          <% if @item.large_image %>
+            <%= image_tag(@item.large_image, alt: @item.title) %>
+          <% # ない場合はno-image.pngを表示 %>
+          <% else %>
+            <%= image_tag("no-image.png" , alt: @item.title) %>
+          <% end %>          
         </div>
       </div>
       <div class="title">
         <% #TODO 商品タイトル %>
-        仮タイトル
+        <%=  @item.title %>
       </div>
       <%= render 'action' , item: @item %>
     </div>
@@ -18,18 +29,23 @@
         <h4 class="side-box-title">Haveしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Haveしたユーザー一覧 %>
-
+            <%  @item.have_users.each do | user | %>
+              <%= link_to gravatar_for( user, size: 20) , user %>
+            <% end %>
         </div>
       </div>
       <div class="side-box">
         <h4 class="side-box-title">Wantしたユーザー</h4>
         <div class="side-box-body">
           <% # TODO Wantしたユーザー一覧 %>
+            <%  @item.want_users.each do | user | %>
+            <%= link_to gravatar_for(user, size: 20), user %>
+            <% end %>
         </div>
       </div>
       <div class="text-center">
         <% #TODO 正しいリンク先に %>
-        <%= link_to(image_tag("amazon-button.png", {alt: "Amazon詳細ページへ"}), '#') %>
+        <%= link_to(image_tag("amazon-button.png", {alt: "Amazon詳細ページへ"}), @item.detail_page_url) %>
       </div>
     </div>
   </div>
