--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
+<% # 各ページのmetaタグ設定 %>
 <% content_for :head do %>
   <meta name='description' content='<%= @user.name %>のページ。<%= @user.name %>の持ってるモノ、欲しいモノを表示しています。'>
   <title><%= @user.name %> - monolist</title>
 <% end %>
 
 <%= render 'profile' , user: @user %>
-
-
 <%= render 'items/list' , items: @items %>
